# surprise-travel-planning-agent

./: CONTRIBUTING.md  Dockerfile.agent  README.md  docker-compose.yml  get_auth0_token.py  mkdocs.yml  openapi.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-push.yml
docs/: index.md  modules.md
surprise_travel_planning_agent/: __init__.py  __main__.py  __version__.py  agent_config.json  main.py
surprise_travel_planning_agent/skills/surprise-travel-planning/: skill.yaml
tests/: test_main.py
